crates/vm/tests/snapshots/fn_call_default__pos_and_default_pos_not_enough_args.snap
---
source: crates/vm/tests/fn_call_default.rs
expression: snapshot
---
# Input:
fn f(a, b=10):
  print a

f()


# Result (error):
[31merror[0m in code: missing required positional params: a


# Stdout:

